mobile view alignment fixed

--- a/src/app/computer-dashboard/computer-dashboard.component.css
+++ b/src/app/computer-dashboard/computer-dashboard.component.css
@@ -95,7 +95,7 @@
   background-color: blue;
 } */
 .comp-table-parent {
-  max-height: 50vh;
+  height: 35vh;
 }
 @media (max-width: 768px) {
   .section-card {
